--- a/client/src/app/became-christian-page/became-christian-page.component.html
+++ b/client/src/app/became-christian-page/became-christian-page.component.html
@@ -1,9 +1,9 @@
 <section class="became-chistian__section became-chistian" id="christian">
-  <h2 class="became-chistian__title title-header">Я только что стал христианином.. Что мне теперь делать?</h2>
-  <div class="became-chistian__image">
+  <h2 class="became-chistian__title title-header _anim-items _anim-no-hide">Я только что стал христианином.. Что мне теперь делать?</h2>
+  <div class="became-chistian__image _anim-items _anim-no-hide">
     <img src="/uploads/became-christian/01.jpeg" alt="image">
   </div>
-  <div class="became-chistian__info">
+  <div class="became-chistian__info _anim-items _anim-no-hide">
     <p>
       Если Вы отдали свою жизнь Христу и пригласили Его в свое сердце, то Вы теперь христианин. Иисус называет это «рождением свыше».
     </p>
@@ -27,7 +27,7 @@
     </p>
   </div>
   <div class="became-chistian__items">
-    <div class="became-chistian__item item-became-christian">
+    <div class="became-chistian__item item-became-christian _anim-items _anim-no-hide">
       <h3 class="item-became-christian__title">1. Читайте Библию каждый день</h3>
       <div class="item-became-christian__text">
         <p>
@@ -41,7 +41,7 @@
         </p>
       </div>
     </div>
-    <div class="became-chistian__item item-became-christian">
+    <div class="became-chistian__item item-became-christian _anim-items _anim-no-hide">
       <h3 class="item-became-christian__title">2. Проводите время в молитве каждый день</h3>
       <div class="item-became-christian__text">
         <p>
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div class="became-chistian__items">
-    <div class="became-chistian__item item-became-christian">
+    <div class="became-chistian__item item-became-christian _anim-items _anim-no-hide">
       <h3 class="item-became-christian__title">3. Находитесь в духовном общении</h3>
       <div class="item-became-christian__text">
         <p>
@@ -82,7 +82,7 @@
         </p>
       </div>
     </div>
-    <div class="became-chistian__item item-became-christian">
+    <div class="became-chistian__item item-became-christian _anim-items _anim-no-hide">
       <h3 class="item-became-christian__title">4. Делитесь об Иисусе с другими</h3>
       <div class="item-became-christian__text">
         <p>
