--- a/client/src/app/expectation-page/expectation-page.component.html
+++ b/client/src/app/expectation-page/expectation-page.component.html
@@ -1,42 +1,74 @@
-<section class="expectation__section expectation" id="expectation">
-  <h2 class="expectation__title title-header">Чего ожидать в церкви?</h2>
-  <div class="expectation__image">
-    <img src="/uploads/expectation/01.jpeg" alt="image">
-  </div>
-  <div class="expectation__items">
-    <div class="expectation__item item-expectation">
-      <h3 class="item-expectation__title">Что я могу ожидать на воскресном служении?</h3>
-      <div class="item-expectation__text">
-        <p>
-          Мы понимаем, что посещение церкви в первый раз может быть необычным для Вас. Чтобы Ваш визит в Пермский «Виноградник» был приятен, мы хотим описать здесь то, что Вы можете ожидать при посещении церкви.
-        </p>
-        <p>
-          Наше служение начинается ровно в 11 утра. В начале служения звучат объявления, после в течение получаса следует музыкальное поклонение, затем молитва. Если у Вас есть дети, то Вы можете привести их на детское служение, которое начинается после поклонения.
-        </p>
-        <p>
-          После этого мы наслаждаемся учением, которое применяет Библейские истины к каждодневной жизни. Служение заканчивается временем служения, которое дает каждому возможность получить молитву.
-        </p>
-        <p>
-          Многие люди остаются после служения для общения и чаепития.
-        </p>
+<div class="wrapper">
+  <main class="main">
+      <div class="main__container">
+        <div class="main__header">
+          <h1 class="main__title">
+            <span class="main__title-custom">Виноградник</span> церковь
+          </h1>
+          <ul class="social__media-icons">
+            <li>
+              <a href="Tel:+79135302209">
+                <i class="material-icons">call</i>
+              </a>
+            </li>
+            <li>
+              <a href="mailto:vinogradnikchurch@gmail.com">
+                <i class="material-icons">mail</i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/@user-be3qy1xt8h/videos">
+                <i class="material-icons">video_library</i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <section class="expectation__section expectation" id="expectation">
+          <h2 class="expectation__title title-header _anim-items _anim-no-hide">Чего ожидать в церкви?</h2>
+          <div class="expectation__image _anim-items _anim-no-hide">
+            <img src="/uploads/expectation/01.jpeg" alt="image">
+          </div>
+          <div class="expectation__items">
+            <div class="expectation__item item-expectation">
+              <h3 class="item-expectation__title _anim-items _anim-no-hide">Что я могу ожидать на воскресном служении?</h3>
+              <div class="item-expectation__text _anim-items _anim-no-hide">
+                <p>
+                  Мы понимаем, что посещение церкви в первый раз может быть необычным для Вас. Чтобы Ваш визит в Норильский «Виноградник» был приятен, мы хотим описать здесь то, что Вы можете ожидать при посещении церкви.
+                </p>
+                <p>
+                  Наше служение начинается ровно в 12 утра. В начале служения звучат объявления, после в течение получаса следует музыкальное поклонение, затем молитва.
+                </p>
+                <p>
+                  После этого мы наслаждаемся учением, которое применяет Библейские истины к каждодневной жизни. Служение заканчивается временем служения, которое дает каждому возможность получить молитву.
+                </p>
+                <p>
+                  Многие люди остаются после служения для общения и чаепития.
+                </p>
+              </div>
+            </div>
+            <div class="expectation__item item-expectation">
+              <h3 class="item-expectation__title _anim-items _anim-no-hide">Как я могу поближе узнать «Виноградник»</h3>
+              <div class="item-expectation__text _anim-items _anim-no-hide">
+                <p>
+                  На неделе мы предлагаем посетить одну из домашних групп, которые находятся в разных районах нашего города. Именно там мы знакомимся ближе друг с другом и можем служить друг другу. Расписание домашних групп можно узнать, связавшись с нами через WhatsApp.
+                </p>
+              </div>
+              <h3 class="item-expectation__title _anim-items _anim-no-hide">Как я могу креститься?</h3>
+              <div class="item-expectation__text _anim-items _anim-no-hide">
+                <p>
+                  Вначале прочитайте нашу статью про  <a routerLink="/baptism">Крещение</a>.
+                </p>
+                <p>
+                  Если вы недавно посвятили свою жизнь Христу или никогда не принимали крещение, вы можете принять участие в ежегодном служении крещения, которое мы обычно проводим осенью. Вы можете подойти к пастору или команде лидеров и сообщить о своем желании принять крещение.
+                </p>
+              </div>
+            </div>
+          </div>
+          <app-button-top></app-button-top>
+        </section>
       </div>
-    </div>
-    <div class="expectation__item item-expectation">
-      <h3 class="item-expectation__title">Как я могу поближе узнать «Виноградник»</h3>
-      <div class="item-expectation__text">
-        <p>
-          На неделе мы предлагаем посетить одну из домашних групп, которые находятся в разных районах нашего города. Именно там мы знакомимся ближе друг с другом и можем служить друг другу. Расписание домашних групп можно узнать, связавшись с нами через WhatsApp.
-        </p>
-      </div>
-      <h3 class="item-expectation__title">Как я могу креститься?</h3>
-      <div class="item-expectation__text">
-        <p>
-          Вначале прочитайте нашу статью про Крещение.
-        </p>
-        <p>
-          Если вы недавно посвятили свою жизнь Христу или никогда не принимали крещение, вы можете принять участие в ежегодном служении крещения, которое мы обычно проводим осенью. Вы можете подойти к пастору или команде лидеров и сообщить о своем желании принять крещение.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+  </main>
+  <app-navbar
+    class="sidebar"
+  ></app-navbar>
+</div>
