--- a/client/src/app/feedback-page/feedback-page.component.html
+++ b/client/src/app/feedback-page/feedback-page.component.html
@@ -25,7 +25,7 @@
       </div>
       <section class="feedback__section feedback">
         <form
-          class="card"
+          class="card _anim-items _anim-no-hide"
           [formGroup]="form"
           (ngSubmit)="onSubmit()"
         >
