--- a/client/src/app/introduction-page/introduction-page.component.html
+++ b/client/src/app/introduction-page/introduction-page.component.html
@@ -24,14 +24,14 @@
           </ul>
         </div>
         <section class="introduction__section introduction">
-          <h2 class="introduction__title">Я здесь впервые</h2>
-          <div class="introduction__image">
+          <h2 class="introduction__title _anim-items _anim-no-hide">Я здесь впервые</h2>
+          <div class="introduction__image _anim-items _anim-no-hide">
             <img src="/uploads/introduction/01.jpeg" alt="image">
           </div>
           <div class="introduction__info">
             <div class="introduction__bible">
-              <h3 class="introduction__heading">Библия. Во что мы верим?</h3>
-              <div class="introduction__content content-introduction">
+              <h3 class="introduction__heading _anim-items _anim-no-hide">Библия. Во что мы верим?</h3>
+              <div class="introduction__content content-introduction _anim-items _anim-no-hide">
                 <div class="content-introduction__image">
                   <img src="/uploads/introduction/bible.jpeg" alt="Bible">
                 </div>
@@ -42,7 +42,7 @@
                 </div>
               </div>
             </div>
-            <div class="introduction__facts facts-introduction">
+            <div class="introduction__facts facts-introduction _anim-items _anim-no-hide">
               <h4 class="facts-introduction__title">Факты о Библии:</h4>
               <div class="facts-introduction__text introduction__text">
                 <p>
@@ -57,7 +57,7 @@
             </div>
           </div>
           <div class="introduction__items">
-            <div class="introduction__item item-introduction">
+            <div class="introduction__item item-introduction _anim-items _anim-no-hide">
               <h4 class="item-introduction__title">«Виноградник» верит в то, что Библия была написана людьми, но вдохновлена Богом.</h4>
               <div class="item-introduction__quote">
                 <p>
@@ -82,7 +82,7 @@
                 </p>
               </div>
             </div>
-            <div class="introduction__item item-introduction">
+            <div class="introduction__item item-introduction _anim-items _anim-no-hide">
               <h4 class="item-introduction__title">«Виноградник» верит в то, что Библия – это откровение.</h4>
               <div class="item-introduction__text introduction__text">
                 <p>
@@ -90,7 +90,7 @@
                 </p>
               </div>
             </div>
-            <div class="introduction__item item-introduction">
+            <div class="introduction__item item-introduction _anim-items _anim-no-hide">
               <h4 class="item-introduction__title">«Виноградник» верит в то, что Библия достоверна.</h4>
               <div class="item-introduction__text introduction__text">
                 <p>
@@ -98,7 +98,7 @@
                 </p>
               </div>
             </div>
-            <div class="introduction__item item-introduction">
+            <div class="introduction__item item-introduction _anim-items _anim-no-hide">
               <h4 class="item-introduction__title">«Виноградник» верит в то, что Библия имеет власть.
               </h4>
               <div class="item-introduction__text introduction__text">
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="introduction__items item-introduction">
-            <div class="introduction__item item-introduction">
+            <div class="introduction__item item-introduction _anim-items _anim-no-hide">
               <h4 class="item-introduction__title">«Как начать читать Библию?</h4>
               <div class="item-introduction__text introduction__text">
                 <p>
@@ -134,7 +134,7 @@
                 </ol>
               </div>
             </div>
-            <div class="introduction__item item-introduction">
+            <div class="introduction__item item-introduction _anim-items _anim-no-hide">
               <h4 class="item-introduction__title">В заключении</h4>
               <div class="item-introduction__text introduction__text">
                 <p>
@@ -143,10 +143,8 @@
               </div>
             </div>
           </div>
-          <app-relationship-page></app-relationship-page>
-          <app-expectation-page></app-expectation-page>
-          <app-baptism-page></app-baptism-page>
           <app-became-christian-page></app-became-christian-page>
+          <app-button-top></app-button-top>
         </section>
       </div>
   </main>
