--- a/client/src/app/resources-page/resources-page.component.html
+++ b/client/src/app/resources-page/resources-page.component.html
@@ -25,12 +25,12 @@
           </ul>
         </div>
         <section class="resources__section resources">
-          <h2 class="resources__title">Ресурсы</h2>
-          <div class="resources__image">
+          <h2 class="resources__title _anim-items _anim-no-hide">Ресурсы</h2>
+          <div class="resources__image _anim-items _anim-no-hide">
             <img src="/uploads/theology.jpeg" alt="vineyards">
           </div>
-          <h3 class="resources__subtitle">Теология Виноградника</h3>
-          <table class="resources__table-theology table-theology striped highlight responsive-table">
+          <h3 class="resources__subtitle _anim-items _anim-no-hide">Теология Виноградника</h3>
+          <table class="resources__table-theology table-theology striped highlight responsive-table _anim-items _anim-no-hide">
             <thead>
               <tr>
                   <th class="table-theology__th">№</th>
@@ -92,8 +92,8 @@
               </tr>
             </tbody>
           </table>
-          <h3 class="resources__subtitle">Ресурсы для духовного роста и служения</h3>
-          <table class="resources__table-resources table-resources striped highlight responsive-table">
+          <h3 class="resources__subtitle _anim-items _anim-no-hide">Ресурсы для духовного роста и служения</h3>
+          <table class="resources__table-resources table-resources striped highlight responsive-table _anim-items _anim-no-hide">
             <thead>
               <tr>
                   <th class="table-theology__th">№</th>
