--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -171,20 +171,13 @@ nav .sidenav-trigger {
 }
 
 .carousel {
-  cursor:grabbing;
+  cursor: grabbing;
+  opacity: 0;
+  transition: all 0.8s ease 0s;
 }
-
-.carousel .indicators {
-  bottom: -55px;
-}
-
-.carousel .indicators .indicator-item.active  {
-  background-color: var(--color-purple);
+.carousel._active {
   opacity: 1;
-}
-.carousel .indicators .indicator-item  {
-  background-color: var(--color-purple);
-  opacity: 0.5;
+  transition: all 0.8s ease 0.4s;
 }
 
 .carousel .carousel-item {
@@ -223,6 +216,9 @@ i.medium {
 
 
 @media only screen and (max-width : 420px) {
+  .social__media-icons .material-icons {
+    font-size: 18px;
+  }
   .carousel .carousel-item {
     height: 335px;
     width: 215px;
