--- a/client/src/app/baptism-page/baptism-page.component.css
+++ b/client/src/app/baptism-page/baptism-page.component.css
@@ -1,4 +1,5 @@
 .baptism__section {
+	padding-top: 100px;
 }
 .baptism {
 }
@@ -6,7 +7,22 @@
 	font-size: 30px;
 	margin-bottom: 25px;
 }
+.baptism__title,
+.baptism__image,
+.baptism__item ,
+.baptism__info {
+	opacity: 0;
+	transition: all 1.5s ease 0s;
+}
+.baptism__title._active,
+.baptism__image._active,
+.baptism__item._active,
+.baptism__info._active {
+	opacity: 1;
+	transition: all 1.5s ease 0s;
+}
 .title-header {
+	border-bottom: none;
 }
 .baptism__image {
 	overflow: hidden;
@@ -23,8 +39,8 @@
 	justify-content: center;
 	flex-wrap: wrap;
 	gap: 25px;
-	padding-top: 100px;
-	margin-top: 100px;
+	padding-top: 50px;
+	margin-top: 50px;
 	margin-bottom: 100px;
 	border-top: solid 1px rgba(210, 215, 217, 0.75);
 }
@@ -73,6 +89,9 @@
 }
 
 @media (max-width: 420px) {
+	.baptism__section {
+		padding-top: 50px;
+	}
 	.baptism__image {
 		margin-bottom: 10px;
 	}
@@ -96,8 +115,10 @@
 		flex: 1 1 100%;
 	}
 	.baptism__items {
-		gap: 15px;
-		padding-bottom: 25px;
-		margin-bottom: 25px;
+		gap: 5px;
+		padding-top: 15px;
+		margin-top: 15px;
+		padding-bottom: 0;
+		margin-bottom: 15px;
 	}
 }
