--- a/client/src/app/creed-page/creed-page.component.css
+++ b/client/src/app/creed-page/creed-page.component.css
@@ -11,12 +11,26 @@
   font-family: "Roboto Slab", serif;
   line-height: 1.5;
   color: var(--main-font-color);
+	transform: translateY(150%);
+	opacity: 0;
+	transition: all 1s ease 0s;
+}
+.creed__title._active {
+	transform: translateY(0px);
+	opacity: 1;
+	transition: all 1s ease 0.4s;
 }
 .title-header {
 }
 .creed__image {
 	overflow: hidden;
 	margin-bottom: 35px;
+	opacity: 0;
+	transition: all 1.3s ease 0s;
+}
+.creed__image._active {
+	opacity: 1;
+	transition: all 1.3s ease 0.8s;
 }
 .creed__image img {
 	border-radius: 10px;
@@ -37,13 +51,24 @@
 	margin-bottom: 25px;
   font-family: "Roboto Slab", serif;
 	font-size: 21px;
+	opacity: 0;
+	transition: all 1.5s ease 0s;
+}
+.item-creed__title._active {
+	opacity: 1;
+	transition: all 1.5s ease 0.4s;
 }
 .item-creed__text {
 	font-size: 17px;
 	color: var(--color-grey-light);
 	line-height: 1.65;
+	opacity: 0;
+	transition: all 1.5s ease 0s;
 }
-
+.item-creed__text._active {
+	opacity: 1;
+	transition: all 1.5s ease 0.8s;
+}
 .item-creed__text-important {
 	font-weight: 700;
 	color: var(--color-purple);
