--- a/client/src/app/creed-page/creed-page.component.html
+++ b/client/src/app/creed-page/creed-page.component.html
@@ -24,46 +24,46 @@
           </ul>
         </div>
         <section class="creed__section creed">
-          <h2 class="creed__title">Символ веры</h2>
-          <div class="creed__image">
+          <h2 class="creed__title _anim-items _anim-no-hide">Символ веры</h2>
+          <div class="creed__image _anim-items _anim-no-hide">
             <img src="/uploads/creed/01.jpeg" alt="image">
           </div>
           <div class="creed__items">
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Святая Троица</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Святая Троица</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Бог – вечный Царь. Он вездесущий, неизменный Дух, совершенный в святости, мудрости, благости, справедливости, силе и любви. От начала дней Он – единый, сущий и истинный Бог в трех Лицах одной Сущности – Отца, Сына и Святого Духа, равных по силе и славе.
                 </p>
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Бог Царь: Создатель и Правитель Всей Вселенной</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Бог Царь: Создатель и Правитель Всей Вселенной</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Божье Царство вечно. Со Своего трона, через Своего Сына и Свое Слово, Бог сотворил, поддерживает и управляет всем существующим: небесами, воинством ангелов, вселенной, землей, всем живым и человечеством. Бог сотворил все хорошо.
                 </p>
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Царство Сатаны</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Царство Сатаны</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Сатана был сотворен как великий, благой ангел, но восстал против Бога, увлекши за собой часть ангелов. Он был изгнан из Божьего присутствия и, захватив власть на земле, установил противостоящее царство тьмы и зла.
                 </p>
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Сотворение Человека и Его Грехопадение</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Сотворение Человека и Его Грехопадение</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Бог сотворил человека по Своему образу и подобию, мужчину и женщину, для общения с Ним и для управления землей. Поддавшись соблазну Сатаны, наши прародители лишились благодати, и через них в мир вошел грех, болезни, Божий суд и смерть. Через падение человека сатана и его демоны получили доступ к творению Бога. Сейчас все творение переживает последствия греха Адама. Люди рождаются в грехе, подвержены Божьему суду и смерти, и являются пленниками темного царства сатаны.
                 </p>
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Божье Провидение, Закон и Заветы</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Божье Провидение, Закон и Заветы</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Бог не оставил Своего господства над землей, которое Он осуществляет через Свое провидение. Для того, чтобы принести искупление, Бог заключил заветы, которые открыли Его благодать грешным людям. В завете, заключенном с Авраамом, Бог дал обещание освободить Свой народ Израиль от рабства греха и сатаны и благословить все народы через него.
                 </p>
@@ -76,8 +76,8 @@
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Христос как Посредник и Вечный Царь</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Христос как Посредник и Вечный Царь</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что с наступлением полноты времени, Бог исполнил Свои заветы и пророческие обещания спасения, послав Своего единственного Сына, Иисуса, в мир. Зачатый от Святого Духа и рожденный Девой Марией, являясь истинным Богом и истинным человеком в одном лице, Он явил нам, каким должен быть человек по замыслу Бога. Иисус был помазан, как Божий Мессия, и, получив силу от Святого Духа, вступил в правление Божьим Царством на земле, разрушил власть сатаны, устоял перед искушением, проповедовал благую весть о спасении, исцелял больных, изгонял демонов и воскрешал мертвых. Собрав Своих учеников, Он создал Свою Церковь для того, чтобы она стала орудием его Царства.
                 </p>
@@ -87,8 +87,8 @@
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Служение Святого Духа</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Служение Святого Духа</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Святой Дух был излит в силе на Церковь в день Пятидесятницы, крестя верующих в Тело Христово и раздавая им дары Духа. Святой Дух приносит с Собой постоянное присутствие Бога в нас для духовного поклонения, личного освящения, назидания и строительства Церкви, наделения нас дарами для служения и оттеснения царства сатаны через благовествование миру, провозглашение слова Иисуса и совершение Его дел.
                 </p>
@@ -98,46 +98,47 @@
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Священное Писание</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Священное Писание</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Святой Дух вдохновил авторов Священного Писания, поэтому Библия в своем оригинале не содержит ошибок. Мы принимаем шестьдесят шесть книг Ветхого и Нового Заветов, как наш высший и абсолютный авторитет, единственный совершенный закон, на котором основываются наша вера и дела.
                 </p>
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Сила Евангелия</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Сила Евангелия</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что мир находится под властью сатаны и что все люди – грешники по природе и выбору, поэтому они подлежат справедливому Божьему суду. Через благую весть об Иисусе Христе и Божьем Царстве и через действие Святого Духа Бог возрождает, оправдывает, усыновляет и освящает через Иисуса Христа Духом всех, кто кается в своих грехах и верит в Иисуса Христа, как в Господа и Спасителя. Таким образом они освобождаются из-под власти сатаны и вступают под царственное владычество Бога.
                 </p>
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Церковь</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Церковь</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span> в единую святую вселенскую Церковь. Все, кто кается в своих грехах и исповедует Иисуса Христа как Господа и Спасителя, возрождаются Святым Духом и составляют живое Тело Христово, в котором Он – Глава, а мы все – члены.
                 </p>
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Крещение и Вечеря Господня</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Крещение и Вечеря Господня</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Иисус Христос завещал Церкви два таинства: водное крещение и Вечеря Господня (причастие). Оба таинства доступны всем верующим.
                 </p>
               </div>
             </div>
             <div class="creed__item item-creed">
-              <h3 class="item-creed__title">Царство Божье и Божий Суд</h3>
-              <div class="item-creed__text">
+              <h3 class="item-creed__title _anim-items _anim-no-hide">Царство Божье и Божий Суд</h3>
+              <div class="item-creed__text _anim-items _anim-no-hide">
                 <p>
                   <span class="item-creed__text-important">МЫ ВЕРИМ</span>, что Божье Царство пришло через служение нашего Господа Иисуса Христа, что оно приходит в служении Духа через Церковь, и что оно полностью совершится в исполненном славы, видимом и победоносном явлении Христа – Его возвращении на землю как Царя. После Своего воцарения Христос окончательно победит сатану, его служителей и дела, воскресит мертвых, совершит окончательный суд и навеки благословит праведников и накажет нечестивых. Бог будет всем во всем, а Его Царство, господство и правление совершатся на новых небесах и на новой земле, сотворенных Его могущественной силой, где будут обитать праведники и где они будут вечно Ему поклоняться.
                 </p>
               </div>
             </div>
           </div>
+          <app-button-top></app-button-top>
         </section>
       </div>
   </main>
