--- a/client/src/app/history-page/history-page.component.css
+++ b/client/src/app/history-page/history-page.component.css
@@ -11,10 +11,24 @@
   font-family: "Roboto Slab", serif;
   line-height: 1.5;
 	color: var(--main-font-color);
+	transform: translateY(150%);
+	opacity: 0;
+	transition: all 1s ease 0s;
+}
+.history__title._active {
+	transform: translateY(0px);
+	opacity: 1;
+	transition: all 1s ease 0.4s;
 }
 .history__image {
 	overflow: hidden;
 	margin-bottom: 35px;
+	opacity: 0;
+	transition: all 1.3s ease 0s;
+}
+.history__image._active {
+	opacity: 1;
+	transition: all 1.3s ease 0.8s;
 }
 .history__image img {
 	border-radius: 10px;
@@ -22,6 +36,24 @@
 }
 .history__text {
 	line-height: 1.65;
+}
+.history__text,
+.history__quote,
+.history__subheading,
+.history__paragraph {
+	opacity: 0;
+	transition: all 1.5s ease 0s;
+}
+.history__text._active,
+.history__quote._active,
+.history__text._active {
+	opacity: 1;
+	transition: all 1.5s ease 0.6s;
+}
+.history__subheading._active,
+.history__paragraph._active {
+	opacity: 1;
+	transition: all 1.5s ease 0.5s;
 }
 .history__text p {
 	padding: 10px 0;
