--- a/client/src/app/our-values-page/our-values-page.component.css
+++ b/client/src/app/our-values-page/our-values-page.component.css
@@ -11,6 +11,14 @@
   font-family: "Roboto Slab", serif;
   line-height: 1.5;
   color: var(--main-font-color);
+	transform: translateY(150%);
+	opacity: 0;
+	transition: all 1s ease 0s;
+}
+.our-values__title._active {
+	transform: translateY(0px);
+	opacity: 1;
+	transition: all 1s ease 0.4s;
 }
 
 .title-header {
@@ -18,6 +26,12 @@
 .our-values__image {
 	overflow: hidden;
 	margin-bottom: 35px;
+	opacity: 0;
+	transition: all 1.3s ease 0s;
+}
+.our-values__image._active {
+	opacity: 1;
+	transition: all 1.3s ease 0.8s;
 }
 .our-values__image img {
 	border-radius: 10px;
@@ -29,6 +43,17 @@
 	margin-bottom: 35px;
 }
 .info-our-values {
+}
+.info-our-values__text,
+.quote-our-values__text,
+.quote-our-values__title,
+.our-values__item {
+	opacity: 0;
+	transition: all 1.5s ease 0s;
+}
+.info-our-values__text._active {
+	opacity: 1;
+	transition: all 1.5s ease 1s;
 }
 .info-our-values__text,
 .item-values__text,
@@ -46,6 +71,18 @@
 }
 .quote-our-values {
 
+}
+.quote-our-values__title._active {
+	opacity: 1;
+	transition: all 1.5s ease 1.2s;
+}
+.quote-our-values__text._active {
+	opacity: 1;
+	transition: all 1.5s ease 1.5s;
+}
+.our-values__item._active {
+	opacity: 1;
+	transition: all 1.5s ease 0.8s;
 }
 .quote-our-values__title,
 .item-values__title {
