--- a/client/src/app/our-values-page/our-values-page.component.html
+++ b/client/src/app/our-values-page/our-values-page.component.html
@@ -24,12 +24,12 @@
           </ul>
         </div>
         <section class="our-values__section our-values">
-          <h2 class="our-values__title">Наши ценности</h2>
-          <div class="our-values__image">
+          <h2 class="our-values__title _anim-items _anim-no-hide">Наши ценности</h2>
+          <div class="our-values__image _anim-items _anim-no-hide">
             <img src="/uploads/our-values/01.jpeg" alt="image">
           </div>
           <div class="our-values__info info-our-values">
-            <div class="info-our-values__text">
+            <div class="info-our-values__text _anim-items _anim-no-hide">
               <p>
                 Каждая церковь «Виноградник» по-своему уникальна, но в то же время есть у нас и общие факторы, которые определяют нас как движение — это наши ценности.
                 Эти ценности описывают важные аспекты «Виноградника», которые объясняют, кто мы и почему мы делаем то, что делаем.
@@ -37,8 +37,8 @@
               </p>
             </div>
             <div class="info-our-values__quote quote-our-values">  
-              <h3 class="quote-our-values__title">Основатель движения «Виноградник» Джон Уимбер:</h3>
-              <div class="quote-our-values__text quote__text">
+              <h3 class="quote-our-values__title _anim-items _anim-no-hide">Основатель движения «Виноградник» Джон Уимбер:</h3>
+              <div class="quote-our-values__text quote__text _anim-items _anim-no-hide">
                 <p>
                   "То, на что мы посвящаем наше время, энергию и деньги, отражает наши истинные ценности, которые мы проживаем, в независимости от того, что мы называем нашими ценностями".
                 </p>
@@ -46,7 +46,7 @@
             </div>
           </div>
           <div class="our-values__items">
-            <div class="our-values__item item-values">
+            <div class="our-values__item item-values _anim-items _anim-no-hide">
               <h4 class="item-values__title">1. Библия</h4>
               <div class="item-values__image">
                 <img src="/uploads/our-values/001.jpeg" alt="image">
@@ -63,7 +63,7 @@
                 </p>
               </div>
             </div>
-            <div class="our-values__item item-values">
+            <div class="our-values__item item-values _anim-items _anim-no-hide">
               <h4 class="item-values__title">2. Божье Царство</h4>
               <div class="item-values__image">
                 <img src="/uploads/our-values/02.jpeg" alt="">
@@ -76,7 +76,7 @@
                 </p>
               </div>
             </div>
-            <div class="our-values__item item-values">
+            <div class="our-values__item item-values _anim-items _anim-no-hide">
               <h4 class="item-values__title">3. Отношения</h4>
               <div class="item-values__image">
                 <img src="/uploads/our-values/03.jpeg" alt="">
@@ -95,7 +95,7 @@
               </div>
             </div>
             
-            <div class="our-values__item item-values">
+            <div class="our-values__item item-values _anim-items _anim-no-hide">
               <h4 class="item-values__title">4. Ценность личности</h4>
               <div class="item-values__image">
                 <img src="/uploads/our-values/04.jpeg" alt="">
@@ -124,7 +124,7 @@
               </ol>
             </div>
 
-            <div class="our-values__item item-values">
+            <div class="our-values__item item-values _anim-items _anim-no-hide">
               <h4 class="item-values__title">5. Господство Иисуса Христа</h4>
               <div class="item-values__image">
                 <img src="/uploads/our-values/05.jpeg" alt="">
@@ -153,7 +153,7 @@
               </div>
             </div>
 
-            <div class="our-values__item item-values">
+            <div class="our-values__item item-values _anim-items _anim-no-hide">
               <h4 class="item-values__title">6. Поклонение</h4>
               <div class="item-values__image">
                 <img src="/uploads/our-values/06.jpeg" alt="">
@@ -173,6 +173,7 @@
               </div>
             </div>
           </div>
+          <app-button-top></app-button-top>
         </section>
       </div>
   </main>
