--- a/client/src/app/history-page/history-page.component.html
+++ b/client/src/app/history-page/history-page.component.html
@@ -163,6 +163,7 @@
             "И приблизившись Иисус сказал им: дана Мне всякая власть на небе и на земле. Итак идите, научите все народы, крестя их во имя Отца и Сына и Святого Духа, уча их соблюдать все, что Я повелел вам; и се, Я с вами во все дни до скончания века. Аминь."
             <span>Евангелие от Матфея 28:18-20</span>.
           </div>
+          <app-button-top></app-button-top>
         </section>
       </div>
   </main>
