--- a/client/src/app/expectation-page/expectation-page.component.html
+++ b/client/src/app/expectation-page/expectation-page.component.html
@@ -56,10 +56,10 @@
               <h3 class="item-expectation__title _anim-items _anim-no-hide">Как я могу креститься?</h3>
               <div class="item-expectation__text _anim-items _anim-no-hide">
                 <p>
-                  Вначале прочитайте нашу статью про  <a routerLink="/baptism">Крещение</a>.
+                  Вначале прочитайте нашу статью про  <a routerLink="/baptism" (click)="toDistance(0)">Крещение</a>.
                 </p>
                 <p>
-                  Если вы недавно посвятили свою жизнь Христу или никогда не принимали крещение, вы можете принять участие в ежегодном служении крещения, которое мы обычно проводим осенью. Вы можете подойти к пастору или команде лидеров и сообщить о своем желании принять крещение.
+                  Если вы недавно посвятили свою жизнь Христу или никогда не принимали крещение, вы можете принять участие в ежегодном служении крещения. Вы можете подойти к пастору или команде лидеров и сообщить о своем желании принять крещение.
                 </p>
               </div>
             </div>
