--- a/client/src/app/shared/components/navbar/navbar.component.css
+++ b/client/src/app/shared/components/navbar/navbar.component.css
@@ -48,9 +48,13 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     margin: 15px 0;
 }
 
+.dropdown__link {
+    margin: 0;
+}
+
 
 .sidenav__sublink {
-    text-indent: 10px;
+    text-indent: 15px;
 }
 
 .sidenav__text,
